--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -33,11 +33,11 @@
 
                 <ul class='navtags'>
                     <li>Home</li>
-                    <li>About Us</li>
+                    <li><a href="#aboutus">About Us</a></li>
                     <li>Order Online</li>
                     <li>Table Reservation</li>
                     <li class='fulogo'><img src="http://en.fusushi.co.il/warehouse/dynamic/55246.png" alt=""></li>
-                    <li>Menus</li>
+                    <li><a href="#menu">Menus</a></li>
                     <li>Gallery</li>
                     <li>Contact US</li>
                     <li>Gift Card</li>
@@ -46,7 +46,7 @@
 
             </nav>
 
-            <H1 class="home__title">ASIAN KITCHEN & SUSHI BAR</H1>
+            <H1 class="home__title" >ASIAN KITCHEN & SUSHI BAR</H1>
 
             <div class="footer">
                 <div class="footer__whatsapp">
@@ -69,7 +69,7 @@
     <section class='lobby'>
 
         <div class="lobby__description">
-            <h2>About Us</h2>
+            <h2 id="aboutus">About Us</h2>
             <p>Welcome to FU sushi bar, where every dish is prepared to perfection. Enjoy Tel Aviv's energetic vibe in
                 our unique ambiance. Whether you are on a date, out with friends or just have a nighttime craving for
                 excellent sushi, FU is the ultimate place to be. We are open daily from 12:00 p.m to 0:00 a.m. and would
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class='menu'>
+    <section class='menu' id="menu">
         <div class="menuopacity">
             <h2 class="menu__title">Menu</h2>
             <div class="menu__box">
