--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -144,7 +144,7 @@
                 <option value="" disabled selected>price</option>
 
                 <option value="priceRange">
-                    price range
+                    <input type="range">
                 </option>
             </select>
 
@@ -153,7 +153,7 @@
 
                 <option value="shoeSize">
                     shoe size
-                    <input type="range">
+
                 </option>
             </select>
 
@@ -187,7 +187,7 @@
                 <option value="letterAsc"> </option>
                 <option value="letterDsc"> </option>
                 <option value="priceAsc">high to low </option>
-                <option value="priceDsc" >low to high </option>
+                <option value="priceDsc">low to high </option>
             </select>
 
         </div>
@@ -196,7 +196,13 @@
             <div class="cards__item">
 
                 <div class="picture">
-                    <i class="far fa-heart"></i>
+                    <svg class="far fa-heart" title="Like hearts-like SVG File" width="21" height="21"
+                        viewBox="0 0 24 24" fill="none" stroke="#8899a4" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path
+                            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                        </path>
+                    </svg>
 
                     <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
                         alt="Card Back">
@@ -636,12 +642,12 @@
     <div id="wishList"></div>
 
     <div id="rootCustomer">
-        
+
     </div>
 
 
     <script src="dist/index.js"> </script>
-   
+
 </body>
 
 </html>
