--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/watchesGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/watchesGucci.html
@@ -39,8 +39,8 @@
                         <div class="title__help">English</div>
                         <div class="title__help">Client Services</div>
                     </div>
-                    <div>
-                        <h1 style="font-size: 4em;">GUCCI</h1>
+                    <div class="container__navBar__title--gucci">
+                        <h1 >GUCCI</h1>
                     </div>
 
                     <div class="container__navBar__title__help">
