--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -151,6 +151,11 @@
 
     <div id="footer">
         <a href="owner.html">Owner Page</a>
+        <p>Created by Andrew Noa & Tamir</p>
+        <p>Aviator Watch S.A.
+            Chemin du val, 2
+            CH-2900 Porrentruy
+            Switzerland</p>
     </div>
 </body>
 
