--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/erp.html
@@ -88,7 +88,7 @@
 
     <div class="container"></div>
 
-    <div class="root"></div>
+    <div id="root"></div>
     <script src="dist/index.js"></script>
 </body>
 
