--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/indexOwner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/indexOwner.html
@@ -11,8 +11,12 @@
 
 <body class="bodyOwner" onload="rendrOwenerItems()">
     <div class="headerOwner">
-        <button class="headerOwner__btn"><a href="./indexStore.html">store</a></button>
-        <button class="headerOwner__btn"><a href="./indexOwner.html">owner</a></button>
+        <div class="nvaStoreOwner">
+            <button class="headerOwner__btn"><a href="./indexStore.html">store</a></button>
+            <button class="headerOwner__btn"><a href="./indexOwner.html">owner</a></button>
+        </div>
+        <div class="logoOwner"><img src="images/logoWhite.png" alt=""></div>
+        <div></div>
     </div>
     <hr>
 
