--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -86,7 +86,7 @@
         </header>
         <!--Omri-->
         <!--John-->
-        <div class="rootBooks">
+        <div class="rootBooks" data-rootBooks>
             <div class="rootBooks__card">
                 <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 15 14">
