--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
@@ -77,9 +77,14 @@
             alt="">
     </div>
 
-    
+    <div class="middle_picture">
+        <img class="pic" src="https://picsum.photos/200
+        " alt="">
+    </div>
 
-    
+
+
+
     <select name="" id="" onchange='handleSelect(event)'>
         <option value="" disabled selected>Choose a type</option>
         <option value="all">Show all</option>
