--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/indexStore.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/indexStore.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d13a0d855d.js" crossorigin="anonymous"></script>
     <title>Gucci</title>
 </head>
 
@@ -163,9 +164,9 @@
                 <p>By entering your email address below, you consent to receiving our newsletter with access to our
                     latest
                     collections, events and initiatives. More details on this are provided in our Privacy Policy</p>
-                <input type="email" id="email" placeholder="Email Address"><button type="submit">></button>
+                <input type="email" id="email" placeholder="Email Address"><button type="submit"  id="submit2"><i class="fas fa-angle-right"></i></button>
                 <h4>STORE LOCATOR</h4>
-                <input type="text" id="location" placeholder="City, Region, Country"><button type="submit">></button>
+                <input type="text" id="location" placeholder="City, Region, Country"><button type="submit" id="submit2"><i class="fas fa-angle-right"></i></button>
 
             </div>
         </div>
