--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -22,7 +22,8 @@
     <form onsubmit="handleAddItems(event)">
         <input id="itemName" type="text" name="name" placeholder="item-name">
         <input id="price" type="number" name="price" placeholder="item-price">
-        <input type="text" name="img" id="img" placeholder="img">
+        <input type="text" name="imgTop" id="img" placeholder="img on top">
+        <input type="text" name="imgBottom" id="img" placeholder="img shown when hovered">
         
         <!-- <select id="selectDepartment">
             <option value="" disabled selected>Choose a department</option>
