--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -97,75 +97,75 @@
             <h2 class="menu__title">Menu</h2>
             <div class="menu__box">
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt=""></div>
+                    <div class="picwrap" id="firsts"><img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt=""></div>
                     <p>Firsts</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt=""></div>
+                    <div class="picwrap" id="soups"><img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt=""></div>
                     <p>Soups</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50866.jpg" alt=""></div>
+                    <div class="picwrap" id="salads"><img src="http://www.fusushi.co.il/warehouse/dynamic/50866.jpg" alt=""></div>
                     <p>Salads</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91136.jpg" alt=""></div>
+                    <div class="picwrap" id="buns"><img src="http://www.fusushi.co.il/warehouse/dynamic/91136.jpg" alt=""></div>
                     <p>Buns</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92764.jpg" alt=""></div>
+                    <div class="picwrap" id="robta-yaki"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92764.jpg" alt=""></div>
                     <p>Robta Yaki</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt=""></div>
+                    <div class="picwrap" id="gyoza"><img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt=""></div>
                     <p>Gyoza</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
+                    <div class="picwrap" id="gonkan-maki"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
                     <p>Gonkan maki</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51711.jpg" alt=""></div>
+                    <div class="picwrap" id="inside-out"><img src="http://www.fusushi.co.il/warehouse/dynamic/51711.jpg" alt=""></div>
                     <p>Inside Out</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/51710.jpg" alt=""></div>
+                    <div class="picwrap" id="specials"><img src="http://www.fusushi.co.il/warehouse/dynamic/51710.jpg" alt=""></div>
                     <p>Specials</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt=""></div>
+                    <div class="picwrap" id="kids-dishes"><img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt=""></div>
                     <p>Kids Dishes</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt=""></div>
+                    <div class="picwrap" id="main-dishes"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt=""></div>
                     <p>Main Dishes</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50868.jpg" alt=""></div>
+                    <div class="picwrap" id="wok"><img src="http://www.fusushi.co.il/warehouse/dynamic/50868.jpg" alt=""></div>
                     <p>Wok</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/91376.jpg" alt=""></div>
+                    <div class="picwrap" id="cocktails"><img src="http://www.fusushi.co.il/warehouse/dynamic/91376.jpg" alt=""></div>
                     <p>Cocktails</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"><img src="http://www.fusushi.co.il/warehouse/dynamic/50881.jpg" alt=""></div>
+                    <div class="picwrap" id="combinations"><img src="http://www.fusushi.co.il/warehouse/dynamic/50881.jpg" alt=""></div>
                     <p>Combinations</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50879.jpg" alt=""></div>
+                    <div class="picwrap" id="sashimi"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50879.jpg" alt=""></div>
                     <p>Sashimi</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50877.jpg" alt=""></div>
+                    <div class="picwrap" id="nigiri"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50877.jpg" alt=""></div>
                     <p>Nigiri</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50875.jpg" alt=""></div>
+                    <div class="picwrap" id="sandwich-sushi"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50875.jpg" alt=""></div>
                     <p>Sandwich Sushi</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50871.jpg" alt=""></div>
+                    <div class="picwrap" id="maki-sushi"> <img src="http://www.fusushi.co.il/warehouse/dynamic/50871.jpg" alt=""></div>
                     <p>Maki Sushi</p>
                 </div>
 
@@ -185,30 +185,30 @@
 
                     <div class="popmenu__box__opacity__wrapper">
 
-                        <div class="popmenu__box__opacity__navbar" id='navbar1'>
-                            <div>Firsts</div>
-                            <div>Soups</div>
-                            <div>Salads</div>
-                            <div>Buns</div>
-                            <div>Robta Yaki</div>
-                            <div>Gyoza</div>
-                            <div>Gonkan Maki</div>
-                            <div>Inside Out</div>
-                            <div>Specials</div>
-                            <div>Kids Dishes</div>
-                            <div>Main Dishes</div>
+                        <ul class="popmenu__box__opacity__navbar" id='navbar1'>
+                            <ui class="popCategory" id="firsts">Firsts</ui>
+                            <ui class="popCategory" id="soups">Soups</ui>
+                            <ui class="popCategory" id="salads">Salads</ui>
+                            <ui class="popCategory" id="buns">Buns</ui>
+                            <ui class="popCategory" id="robta-yaki">Robta Yaki</ui>
+                            <ui class="popCategory" id="gyoza">Gyoza</ui>
+                            <ui class="popCategory" id="gonkan-maki">Gonkan Maki</ui>
+                            <ui class="popCategory" id="inside-out">Inside Out</ui>
+                            <ui class="popCategory" id="specials">Specials</ui>
+                            <ui class="popCategory" id="kids-dishes">Kids Dishes</ui>
+                            <ui class="popCategory" id="main-dishes">Main Dishes</ui>
 
-                        </div>
+                        </ul>
 
-                        <div class="popmenu__box__opacity__navbar" id='navbar2'>
-                            <div>Wok</div>
-                            <div>Cokctails</div>
-                            <div>Combinations</div>
-                            <div>Sashimi</div>
-                            <div>Nigiri</div>
-                            <div>Sandwich Sushi</div>
-                            <div>Maki Sushi</div>
-                        </div>
+                        <ul class="popmenu__box__opacity__navbar" id='navbar2'>
+                            <ui class="popCategory" id="wok">Wok</ui>
+                            <ui class="popCategory" id="cocktails">Cokctails</ui>
+                            <ui class="popCategory" id="combinations">Combinations</ui>
+                            <ui class="popCategory" id="sashimi">Sashimi</ui>
+                            <ui class="popCategory" id="nigiri">Nigiri</ui>
+                            <ui class="popCategory" id="sandwich-sushi">Sandwich Sushi</ui>
+                            <ui class="popCategory" id="maki-sushi">Maki Sushi</ui>
+                        </ul>
 
                     </div>
 
