--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bookie</title>
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./dist/Bookie.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
