--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>myBookie</title>
     <link rel="stylesheet" href="./dist/myBookie.css">
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,9 +52,12 @@
                         <option value="Desc">Descending</option>
                     </select>
                     <lable for="updateBookByID">type the id of the book you would like to update:</lable>
-                    <select onchange="handleUpdate(event)" data-update-book-by-id name="updateBookByID" id="updateBookByID">
-                    </select>
-
+                    <form onsubmit="handleUpdate()">
+                    <select onchange="handleUpdate(event)" data-update-book-by-id name="updateBookByID"
+                            id="updateBookByID">
+                        </select>
+                        <input type="submit" value="Update">
+                    </form>
                 </table>
             </div>
         </div>
