--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -110,7 +110,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="" alt="" class="rootBooks__card__img">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
             </div>
@@ -136,7 +136,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="" alt="" class="rootBooks__card__img">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
             </div>
@@ -162,7 +162,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="" alt="" class="rootBooks__card__img">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
             </div>
@@ -188,7 +188,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="" alt="" class="rootBooks__card__img">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
             </div>
