--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
@@ -77,10 +77,7 @@
             alt="">
     </div>
 
-    <div class="middle_picture">
-        <img class="pic" src="https://picsum.photos/200
-        " alt="">
-    </div>
+    
 
 
 
@@ -91,7 +88,9 @@
         <option value="shoes">Shoes</option>
         <option value="hoodie">Hoodie</option>
     </select>
-    <div id="root1"></div>
+
+    <button onclick="handleGetProduct()">Get Products</button>  
+      <div id="customerRoot"></div>
 
     <script src="dist/index.js"></script>
 </body>
