--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -136,9 +136,9 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
-                <div class="rootBooks__card__title">title</div>
-                <div class="rootBooks__card__price">30$</div>
+                <img src="Images\Darthplagueis-cover.jpg" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">Star Wars</div>
+                <div class="rootBooks__card__price">89$</div>
             </div>
             <div class="rootBooks__card">
                 <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
@@ -162,9 +162,9 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
-                <div class="rootBooks__card__title">title</div>
-                <div class="rootBooks__card__price">30$</div>
+                <img src="Images/prince.jpg" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">The Little Prince</div>
+                <div class="rootBooks__card__price">3$</div>
             </div>
             <div class="rootBooks__card">
                 <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
@@ -188,9 +188,9 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></button>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuaVjRvjIZAO6XIsd0eHS22Q949ke7r-KZFg&usqp=CAU" alt="" class="rootBooks__card__img">
-                <div class="rootBooks__card__title">title</div>
-                <div class="rootBooks__card__price">30$</div>
+                <img src="Images/harrypotter.jpg" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">Harry Potter</div>
+                <div class="rootBooks__card__price">54$</div>
             </div>
         </div>
         <!--John-->
