--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/new/gucciNEWyossi/indexStore.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/new/gucciNEWyossi/indexStore.html
@@ -157,29 +157,27 @@
 
             <div class="footer__section">
                 <h4>FIND US ON</h4>
-                <li> <i class='fa fa-facebook'></i>
+                <li ><i class='fa fa-facebook' id="Facebooklogo"></i></i>
                     Facebook</li>
-                <li> <i class='fa fa-twitter'></i>
+                <li > <i class='fa fa-twitter' id="Twitterlogo" ></i>
 
                     Twitter</li>
-                <li> <i class='fa fa-instagram'></i>
+                <li> <i class='fa fa-instagram' id="Instagramlogo"></i>
 
                     Instagram</li>
-                <li> <i class='fa fa-instagram'></i>
+                <li> <i class='fa fa-instagram' id="Instagramlogo" ></i>
 
                     Instagram Beauty</li>
-                <li> <i class='fa fa-youtube-play'></i>
+                <li> <i class='fa fa-youtube-play'  id="Youtubelogo"></i>
 
                     Youtube</li>
                 <li> <i class='fa fa-podcast'></i>
 
                     Gucci Podcast</li>
-                <li> <i class='fa fa-pinterest-p'></i>
+                <li> <i class='fa fa-pinterest-p' id="Pinterestlogo" ></i>
 
                     Pinterest</li>
-                <li> <i class='fa fa-snapchat-ghost'></i>
-
-
+                <li> <i class='fa fa-snapchat-ghost'  id="Snapchatlogo"></i>
 
                     Snapchat</li>
             </div>
