--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
@@ -25,11 +25,10 @@
             <option value="buns">Buns</option>
             <option value="robta-yaki">Robta Yaki</option>
             <option value="gyoza">Gyoza</option>
-            <option value="gonkan-maki">Special Gonkan maki</option>
             <option value="inside-out">Inside Out</option>
             <option value="specials">Specials</option>
-            <option value="kids-dishes">Kids Dishes</option>
-            <option value="main-dishes">Main Dishes</option>
+            <option value="kids">Kids Dishes</option>
+            <option value="main">Main Dishes</option>
             <option value="wok">Wok</option>
             <option value="cokctails">Cokctails</option>
             <option value="combinations">Combinations</option>
@@ -37,6 +36,7 @@
             <option value="nigiri">Nigiri</option>
             <option value="sandwich-sushi">Sandwich Sushi</option>
             <option value="maki-sushi">Maki Sushi</option>
+            <option value="gonkan">Gonkan Maki</option>
         </select>
         <input type="submit" value="Add">
     </form>
