--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -121,7 +121,7 @@
                     <p>Gyoza</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap" id="gonkan-maki"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
+                    <div class="picwrap" id="gonkan"> <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt=""></div>
                     <p>Gonkan maki</p>
                 </div>
                 <div class="menu__cell">
@@ -133,11 +133,11 @@
                     <p>Specials</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap" id="kids-dishes"><img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt=""></div>
+                    <div class="picwrap" id="kids"><img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt=""></div>
                     <p>Kids Dishes</p>
                 </div>
                 <div class="menu__cell">
-                    <div class="picwrap" id="main-dishes"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt=""></div>
+                    <div class="picwrap" id="main"> <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt=""></div>
                     <p>Main Dishes</p>
                 </div>
                 <div class="menu__cell">
@@ -192,11 +192,11 @@
                             <ui class="popCategory" id="buns">Buns</ui>
                             <ui class="popCategory" id="robta-yaki">Robta Yaki</ui>
                             <ui class="popCategory" id="gyoza">Gyoza</ui>
-                            <ui class="popCategory" id="gonkan-maki">Gonkan Maki</ui>
+                            <ui class="popCategory" id="gonkan">Gonkan Maki</ui>
                             <ui class="popCategory" id="inside-out">Inside Out</ui>
                             <ui class="popCategory" id="specials">Specials</ui>
-                            <ui class="popCategory" id="kids-dishes">Kids Dishes</ui>
-                            <ui class="popCategory" id="main-dishes">Main Dishes</ui>
+                            <ui class="popCategory" id="kids">Kids Dishes</ui>
+                            <ui class="popCategory" id="main">Main Dishes</ui>
 
                         </ul>
 
