--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -146,7 +146,7 @@
 
     <div class='wow'>
         <h2 class='wow__title'>your items redy to delivery:</h2>
-        <div id='cart'></div>
+        <div class='cart'></div>
     </div>
 
     <div id="footer">
