--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -62,9 +62,9 @@
         <h5>Toys</h5>
         <h5>Lifestyle</h5>
         <h5>Health</h5>
-        <h5>Camh5ing</h5>
+        <h5>Camping</h5>
         <h5>Electric</h5>
-        <h5>Beauty and h5erfume</h5>
+        <h5>Beauty and perfume</h5>
         <h5>Gift card</h5>
         <h5>Sale</h5>
         <h5>Home</h5>
