--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -54,6 +54,8 @@
         <input id="removeBtn" type="submit" value="remove">
     </form>
     <div>-------------------------------------------------------------------------------------------------------------</div>
+
+    <!-- <div id="root"></div> needed cause the handle update didnt even have a root when i did console.log(root)  -->
     <form onsubmit="handleUpdate(event , '${product.id}')">
         <input type="text" type="itemName" name="itemName"placeholder="write item name to update">
         <input class='tsInput'  type="number" name="update" placeholder="Update Price">
