--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.html
@@ -37,31 +37,25 @@
                 </div>
                 <input type="submit" value="add">
             </form>
-            <div class="table">
-                <table>
-                    <label for="ownerSort">sort things out for your comfort</label>
-                    <select onchage="handleOwnerSort(event)" name="ownerSort" id="ownerSort">
-                        <option disabled selected value="None">Choose</option>
-                        <option value="Asc">Ascending</option>
-                        <option value="Desc">Descending</option>
-                    </select>
-                    <label for="customerSort">sort how others would see your shop</label>
-                    <select onchage="handleCustomerSort(event)" name="customerSort" id="customerSort">
-                        <option disabled selected value="None">Choose</option>
-                        <option value="Asc">Ascending</option>
-                        <option value="Desc">Descending</option>
-                    </select>
-                    <lable for="updateBookByID">type the id of the book you would like to update:</lable>
-                    <form onsubmit="handleEdit(event)">
-                    <select onchange="handleID(event)" data-update-book-by-id name="updateBookByID"
-                            id="updateBookByID">
-                        </select>
-                        <input type="submit" value="Update">
-                    </form>
-
-                    <div data-update-here class="updateHere">
-                        
-                    </div>
+            <div class="sorts">
+                <label for="ownerSort">sort things out for your comfort</label>
+                <select onchage="handleOwnerSort(event)" name="ownerSort" id="ownerSort">
+                    <option disabled selected value="None">Choose</option>
+                    <option value="Asc">Ascending</option>
+                    <option value="Desc">Descending</option>
+                </select>
+                <label for="customerSort">sort how others would see your shop</label>
+                <select onchage="handleCustomerSort(event)" name="customerSort" id="customerSort">
+                    <option disabled selected value="None">Choose</option>
+                    <option value="Asc">Ascending</option>
+                    <option value="Desc">Descending</option>
+                </select>
+                <table data-toggle-existing>
+                    <tr>
+                        <th>Title</th>
+                        <th>Year written</th>
+                        <th>price</th>
+                    </tr>
                 </table>
             </div>
         </div>
