--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -36,6 +36,11 @@
             <option value="" disabled selected>Choose a gender</option>
             <option value="men">men</option>
             <option value="women">women</option>
+            <option value="children">children</option>
+            <option value="menWatches">men watches</option>
+            <option value="womenJewlery">women jewelry</option>
+            <option value="womenBags">women bags</option>
+         
         </select>
         <select id="selectType">
             <option value="" disabled selected>Choose a type</option>
