cart + category features

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -147,6 +147,8 @@
     <div class='wow'>
         <h2 class='wow__title'>your items redy to delivery:</h2>
         <div class='cart'></div>
+        <div class='wow__total'>your total is: <button>Check Out</button></div>
+
     </div>
 
     <div id="footer">
